# NLP_Assemblee

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  TODO.md  disclaimer.txt  environment.yml  exemple_camembert_classifier.py  exemple_topic_modelling.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  virtual-packages.yml
.github/workflows/: action-python.yml
api/api/: index.html
api/scrapping/: index.html
compiled_data/: 15th_deputies.pkl  15th_legislature_complete.tsv
complex/api/: index.html
complex/dataset/: index.html
complex/models/: index.html
complex/trainer/: index.html
configs/: TSP_C_256-M-L_BN_D_128_128.json  bert.json  camembert.json  simple.json
data/compiled/: 14th_deputies.pkl  14th_legislature_complete.tsv  15th_legislature_complete.tsv
data/processed/: 14th_bert_tokenizer.pkl  14th_camembert_tokenizer.pkl  14th_merged_data.pkl  14th_records.pkl  15th_merged_data.pkl
docs/: api.md  index.md
docs/api/: api.md  scrapping.ipynb
docs/complex/: dataset.md  models.md  trainer.md
docs/notebooks/: data_processing.ipynb  datasets.ipynb  embeddings.ipynb  precompute.ipynb  processing.ipynb  scrapping.ipynb  training.ipynb
docs/simple/: data_processing.md  dataset.md  precompute.md  scrapping.md  trainer.md  visualisation.md
env_files/: dev-requirements.txt
nlp_assemblee/: __init__.py  api.py  data_processing.py  dataset_torch.py  datasets.py  models.py  simple_datasets.py  simple_precompute.py  simple_trainer.py  simple_visualisation.py  trainer.py
nlp_assemblee/scrapping/: api.py  fetch_data_from_api.py
notebooks/: clean.ipynb  data_processing.ipynb  datasets.ipynb  precompute.ipynb  robert_using.ipynb  scrapping.ipynb  test.ipynb  test_api.ipynb  test_torch.ipynb
notebooks/data_processing/: index.html
notebooks/datasets/: index.html
notebooks/experiments/: base_training.ipynb  baseline.ipynb  choose_optimizer.ipynb  dummy_classifier.ipynb  lm_model_selection.ipynb  new_features.ipynb
notebooks/precompute/: index.html
notebooks/scrapping/: index.html
old/: async.txt  datasetbuilder.py  spacy_practice.py  wordembedding.py
results/baseline/: logs.json  metrics.json
results/dummy_classifier_most_frequent/: logs.json
results/dummy_classifier_prior/: logs.json
search/: search_index.json
src/: __init__.py  dataset.py  dataset_torch.py  datasetbuilder.py  datasets.py  model.py  models.py  spacy_practice.py  trainer.py  word2vec_practice.py  wordembedding.py
tests/: __init__.py
tsvs/: ND13_interventions_QAG.tsv  ND14_interventions_QAG.tsv  ND15_interventions_QAG.tsv
(+170 files in other folders)
