[tool.poetry]
name = "nlp-assemblee"
version = "0.0.1"
description = "NLP project on data from the French Assemblée Nationale."
authors = [
    "Gabriel Watkinson <gabriel.watkinson@gmail.com>",
    "Jérémie Stym-Popper <jeremie.stym-popper@ensae.fr>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "nlp_assemblee"}]


[tool.poetry.dependencies]
python = "^3.10"

# [tool.poetry.group.dev.dependencies]
# # Environment
# pre-commit=2.20
# # Formatter
# black=22.10
# pylint=2.15
# isort=5.10
# mypy=0.991
# # Docs
# mkdocs=1.4
# mkdocs-material=9.0
# mkdocstrings=0.19
# mkdocs-git-committers-plugin-2
# mkdocs-git-authors-plugin
# mkdocs-jupyter=0.22
# streamlit=1.9


[tool.poetry.scripts]
scrap_data = "nlp_assemblee.scrapping.fetch_data_from_api:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
