[tool.poetry]
name = "nlp-assemblee"
version = "0.0.1"
description = "NLP project on data from the French Assemblée Nationale."
authors = [
    "Gabriel Watkinson <gabriel.watkinson@gmail.com>",
    "Jérémie Stym-Popper <jeremie.stym-popper@ensae.fr>"
]
license = "MIT"
readme = "README.md"

packages = [{include = "nlp_assemblee"}]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylama = "^8.4.1"
isort = "^5.11.4"
mypy = "^0.991"
nbqa = {extras = ["toolchain"], version = "^1.6.1"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = ">=8.0.0, <9.0.0"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-authors-plugin = "^0.7.0"
# mkdocs-jupyter=0.22
mkdocs-jupyter = "^0.22.0"


[tool.poetry.group.env.dependencies]
pre-commit = "^2.21.0"


[tool.poetry.scripts]
scrap_data = "nlp_assemblee.scrapping.fetch_data_from_api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
